--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,14 @@
 <html>
   <head>
     <title>Public App</title>
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#317EFB">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#317EFB">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#317EFB">
+    <link rel="manifest" href="/manifest.json">
     <script type="text/javascript">
     <!-- Disable Double Click -->
     function attachEvent(element, evtId, handler) {
@@ -46,6 +54,7 @@
     attachEvent(window, "load", disableZoom);
     // -->
     </script>
+
   </head>
   <body>
     <div id="root"></div>
