--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/public/bundle.js"></script>
+    <script src="/public/bundle.js.gz"></script>
   </body>
 </html>
