--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <!-- <meta name="MobileOptimized" content="480"> -->
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=640px, initial-scale=.5, maximum-scale=.5" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=.5 minimum-scale=.5 user-scalable=no"/>
   </head>
   <body>
 
