--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Public App</title>
+    <title>Mr.House</title>
+    <link rel="manifest" href="/manifest.json">
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#317EFB">
     <!-- Windows Phone -->
