--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
   <head>
     <title>Mr.House</title>
     <link rel="manifest" href="/manifest.json">
