--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,7 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html>
   <head>
     <title>Mr.House</title>
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#317EFB"/>
-    <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#317EFB">
-    <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#317EFB">
-    <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#317EFB">
-    <!--iOS -->
-    <meta name="apple-mobile-web-app-title" content="Paul@筆記本">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="HandheldFriendly" content="True">
-    <!-- <meta name="MobileOptimized" content="480"> -->
-    <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=.5, maximum-scale=.5 minimum-scale=.5 user-scalable=no"/>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui"> -->
   </head>
   <body>
 
