add chatbot json

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,16 @@
   <body>
 
     <div id="root"></div>
+    <h1 id="title">hello<span>span</span></h1>
 <!--     <script type="text/javascript" src="/kk.js"></script></body> -->
-    <script type="text/javascript" src="/index.bundle.js"></script></body>
+    <script type="text/javascript" src="/index.bundle.js"></script>
+  
+    <script type="text/javascript" src="/dom.js"></script>
+    
+  
+  
+  </body>
+
 
 </html>
 
