--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 <!--     <script type="text/javascript" src="/kk.js"></script></body> -->
     <script type="text/javascript" src="/index.bundle.js"></script>
   
-    <script type="text/javascript" src="/dom.js"></script>
+    <!-- <script type="text/javascript" src="/dom.js"></script> -->
     
   
   
