--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#317EFB">
     <!--iOS -->
-    <meta name="apple-mobile-web-app-title" content="Paul@筆記本">
+    <meta name="apple-mobile-web-app-title" content="Mr.House">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="HandheldFriendly" content="True">
