--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <style>
       @font-face {
           font-family: "DFY2";
-          src: url("UntitledTTF.woff") format('woff');
+          src: url("Untit.woff2") format('woff2');
           font-weight: 800;
           font-style: normal;
       }
