--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,9 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=.5, maximum-scale=.5 minimum-scale=.5 user-scalable=no"/>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui"> -->
   </head>
-  <script type="text/javascript">var _jf = _jf || [];_jf.push(['p','52637']);_jf.push(['_setFont','setofont','css','.setofont']);_jf.push(['_setFont','setofont','alias','setofont']);_jf.push(['_setFont','setofont','weight',600]);(function(f,q,c,h,e,i,r,d){var k=f._jf;if(k.constructor===Object){return}var l,t=q.getElementsByTagName("html")[0],a=function(u){for(var v in k){if(k[v][0]==u){if(false===k[v][1].call(k)){break}}}},j=/\S+/g,o=/[\t\r\n\f]/g,b=/^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g,g="".trim,s=g&&!g.call("\uFEFF\xA0")?function(u){return u==null?"":g.call(u)}:function(u){return u==null?"":(u+"").replace(b,"")},m=function(y){var w,z,v,u,x=typeof y==="string"&&y;if(x){w=(y||"").match(j)||[];z=t[c]?(" "+t[c]+" ").replace(o," "):" ";if(z){u=0;while((v=w[u++])){if(z.indexOf(" "+v+" ")<0){z+=v+" "}}t[c]=s(z)}}},p=function(y){var w,z,v,u,x=arguments.length===0||typeof y==="string"&&y;if(x){w=(y||"").match(j)||[];z=t[c]?(" "+t[c]+" ").replace(o," "):"";if(z){u=0;while((v=w[u++])){while(z.indexOf(" "+v+" ")>=0){z=z.replace(" "+v+" "," ")}}t[c]=y?s(z):""}}},n;k.push(["_eventActived",function(){p(h);m(e)}]);k.push(["_eventInactived",function(){p(h);m(i)}]);k.addScript=n=function(u,A,w,C,E,B){E=E||function(){};B=B||function(){};var x=q.createElement("script"),z=q.getElementsByTagName("script")[0],v,y=false,D=function(){x.src="";x.onerror=x.onload=x.onreadystatechange=null;x.parentNode.removeChild(x);x=null;a("_eventInactived");B()};if(C){v=setTimeout(function(){D()},C)}x.type=A||"text/javascript";x.async=w;x.onload=x.onreadystatechange=function(G,F){if(!y&&(!x.readyState||/loaded|complete/.test(x.readyState))){y=true;if(C){clearTimeout(v)}x.src="";x.onerror=x.onload=x.onreadystatechange=null;x.parentNode.removeChild(x);x=null;if(!F){setTimeout(function(){E()},200)}}};x.onerror=function(H,G,F){if(C){clearTimeout(v)}D();return true};x.src=u;z.parentNode.insertBefore(x,z)};a("_eventPreload");m(h);n(r,"text/javascript",false,3000)})(this,this.document,"className","jf-loading","jf-active","jf-inactive","//ds.justfont.com/js/stable/v/5.0.3/id/228401190703");</script>
   <style>
       @font-face {
-          font-family: "DFY2";
+          font-family: "DFY";
           src: url("Untit.woff2") format('woff2');
           font-weight: 800;
           font-style: normal;
@@ -36,6 +35,11 @@
           font-weight: 800;
           font-style: normal;
       }
+      @font-face {
+    font-family: "DFY2";
+    src: url("DFY.woff2") format('woff2');
+    font-weight: 800;
+}      
   </style>
 
   <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
