--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,17 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui"> -->
   </head>
   <style>
+    @import url(//fonts.googleapis.com/earlyaccess/cwtexyen.css);
+    @import url(//fonts.googleapis.com/earlyaccess/cwtexhei.css);
       @font-face {
           font-family: "DFY";
           src: url("Untit.woff2") format('woff2');
+          font-weight: 800;
+          font-style: normal;
+      }
+      @font-face {
+          font-family: "DFY";
+          src: url("DFY-Gordon.woff") format('woff');
           font-weight: 800;
           font-style: normal;
       }
@@ -39,14 +47,10 @@
     font-family: "DFY2";
     src: url("DFY.woff2") format('woff2');
     font-weight: 800;
-}      
+    }      
   </style>
-
   <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
-  
   <body>
-
-
     <div id="root"></div>
     <!-- <h1 id="title">hello<span>span</span></h1> -->
 <!--     <script type="text/javascript" src="/kk.js"></script></body> -->
