--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,6 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui"> -->
   </head>
   <style>
-    @import url(//fonts.googleapis.com/earlyaccess/cwtexyen.css);
-    @import url(//fonts.googleapis.com/earlyaccess/cwtexhei.css);
       @font-face {
           font-family: "DFY";
           src: url("Untit.woff2") format('woff2');
@@ -49,7 +47,6 @@
     font-weight: 800;
     }      
   </style>
-  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
   <body>
     <div id="root"></div>
     <!-- <h1 id="title">hello<span>span</span></h1> -->
@@ -64,6 +61,7 @@
 
 
 </html>
+<!-- <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">-->
 
     <!-- Service Worker -->
     <!-- 
