--- a/public/index.html
+++ b/public/index.html
@@ -1,70 +1,75 @@
 <!DOCTYPE html>
 <html lang="HK">
-  <head>
-    <title>Mr.House</title>
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#317EFB"/>
-    <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#317EFB">
-    <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#317EFB">
-    <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#317EFB">
-    <!--iOS -->
-    <meta name="apple-mobile-web-app-title" content="Mr.House">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="HandheldFriendly" content="True">
-    <!-- <meta name="MobileOptimized" content="480"> -->
-    <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=.5, maximum-scale=.5 minimum-scale=.5 user-scalable=no"/>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui"> -->
-  </head>
-  <style>
-      @font-face {
-          font-family: "DFY";
-          src: url("Untit.woff2") format('woff2');
-          font-weight: 800;
-          font-style: normal;
-      }
-      @font-face {
-          font-family: "DFY";
-          src: url("DFY-Gordon.woff") format('woff');
-          font-weight: 800;
-          font-style: normal;
-      }
-    @font-face {
-          font-family: "DFY";
-          src: url("DFHsiu-W3-WINP-BF.woff") format('woff');
-          font-weight: 800;
-          font-style: normal;
-      }
-      @font-face {
+<head>
+  <title>Mr.House</title>
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#317EFB" />
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#317EFB">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#317EFB">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#317EFB">
+  <!--iOS -->
+  <meta name="apple-mobile-web-app-title" content="Mr.House">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="HandheldFriendly" content="True">
+  <!-- <meta name="MobileOptimized" content="480"> -->
+  <!-- Add to homescreen for Chrome on Android -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=.5, maximum-scale=.5 minimum-scale=.5 user-scalable=no"
+  />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui"> -->
+</head>
+<style>
+  @font-face {
+    font-family: "DFY";
+    src: url("Untit.woff2") format('woff2');
+    font-weight: 800;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "DFY";
+    src: url("DFY-Gordon.woff") format('woff');
+    font-weight: 800;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "DFY";
+    src: url("DFHsiu-W3-WINP-BF.woff") format('woff');
+    font-weight: 800;
+    font-style: normal;
+  }
+
+  @font-face {
     font-family: "DFY2";
     src: url("DFY.woff2") format('woff2');
     font-weight: 800;
-    }      
-  </style>
-  <body>
-    <div id="root"></div>
-    <!-- <h1 id="title">hello<span>span</span></h1> -->
-<!--     <script type="text/javascript" src="/kk.js"></script></body> -->
-    <script type="text/javascript" src="/index.bundle.js"></script>
-  
-    <!-- <img src="mrhousecolor.jpeg"> -->
-    <!-- <script type="text/javascript" src="/dom.js"></script> -->
-    
-    
-  </body>
+  }
+</style>
+
+<body>
+  <div id="root"></div>
+  <!-- <h1 id="title">hello<span>span</span></h1> -->
+  <!--     <script type="text/javascript" src="/kk.js"></script></body> -->
+  <script type="text/javascript" src="/index.bundle.js"></script>
+
+  <!-- <img src="mrhousecolor.jpeg"> -->
+  <!-- <script type="text/javascript" src="/dom.js"></script> -->
+
+
+</body>
 
 
 </html>
 <!-- <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">-->
 
-    <!-- Service Worker -->
-    <!-- 
+<!-- Service Worker -->
+<!-- 
     <script>
       if ('serviceWorker' in navigator) {
   window.addEventListener('load', function() {
