--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
   <!-- <meta name="MobileOptimized" content="480"> -->
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
-  <!-- <meta name="viewport" content="width=device-width, height=device-height, initial-scale=.5, maximum-scale=.5 minimum-scale=.5 user-scalable=no"
-  />-->
+  <!-- <meta id="viewport" name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1; user-scalable=no;"> -->
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=.5, maximum-scale=.5 minimum-scale=.5 user-scalable=no"
+  />
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui"> -->
 </head>
 <style>
