--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,12 @@
     src: url("DFY.woff2") format('woff2');
     font-weight: 800;
   }
+
+  @font-face {
+    font-family: "mrhouse";
+    src: url("mrhouse.woff") format('woff');
+    font-weight: 800;
+  }
 </style>
 
 <body>
